# PyOghma_ML-Public

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Tests/: DeviceReport.csv  Predicting_Tests_Point.py
src/: Training_Tests_Point.py
src/PyOghma_ML/: Figures.py  Input.py  Labels.py  Latex.py  Networks.py  Output.py  Predicting.py  Training.py  __init__.py
